pkg/gox/testdata/errors/qualified_lowercase.gox
package demo

import ui "github.com/example/app/internal/ui"

func View() any {
	return <ui.header />
}
